comments and footer for home

--- a/index.html
+++ b/index.html
@@ -28,24 +28,64 @@
                 </nav>
             </header>
             <section class="general-container">
-            <article class="home-description">
-                <h2>¿Qué es el Tarot Estelar?</h2>
-                <p>El tarot estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,
-                    conciencia y mutación profunda para vivir una vida plena.</p>
-                <p>Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con
-                    una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la
-                    personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas
-                    respuestas en la conducta ante las alternativas cotidianas.</p>
-                <p>Con el tarot astrológico podemos mirarnos con nuevos ojos y aceptar nuestra tarea de
-                    formación y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra
-                    existencia, aun los dolorosos, para convertirlos en alimento del alma.</p>
-                <p>A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte en
-                    un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la
-                    autosanación, ejercitando y educando nuestras capacidades internas para logra la
-                    transpersonalidad.</p>
-                <p>El tarot astrológico plantea la formación de personas capaces de generar sus propios procesos
-                    de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
-            </article>
+                <article class="home-description">
+                    <h2>¿Qué es el Tarot Estelar?</h2>
+                    <p>El tarot estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,
+                        conciencia y mutación profunda para vivir una vida plena.</p>
+                    <p>Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con
+                        una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la
+                        personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas
+                        respuestas en la conducta ante las alternativas cotidianas.</p>
+                    <p>Con el tarot astrológico podemos mirarnos con nuevos ojos y aceptar nuestra tarea de
+                        formación y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra
+                        existencia, aun los dolorosos, para convertirlos en alimento del alma.</p>
+                    <p>A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte en
+                        un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la
+                        autosanación, ejercitando y educando nuestras capacidades internas para logra la
+                        transpersonalidad.</p>
+                    <p>El tarot astrológico plantea la formación de personas capaces de generar sus propios procesos
+                        de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
+                </article>
+                <article class="comments">
+                    <h2>Comments</h2>
+                    <div class="single-comment">
+                        <img src="apple-touch-icon.png"/>
+                        <p class="username">Anonimous wilkins</p>
+                        <p class="date-comment">12 de Agosto del 2017</p>
+                        <p class="description-comment">Me encanto la sesion, pude aprender mucho y lo puedo 100% recomendar a cualquier persona</p>
+                    </div>
+
+                    <div class="single-comment">
+                        <img src="apple-touch-icon.png"/>
+                        <p class="username">Anonimous wilkins</p>
+                        <p class="date-comment">12 de Agosto del 2017</p>
+                        <p class="description-comment">Me encanto la sesion, pude aprender mucho y lo puedo 100% recomendar a cualquier persona</p>
+                    </div>
+
+                    <div class="single-comment">
+                        <img src="apple-touch-icon.png"/>
+                        <p class="username">Anonimous wilkins</p>
+                        <p class="date-comment">12 de Agosto del 2017</p>
+                        <p class="description-comment">Me encanto la sesion, pude aprender mucho y lo puedo 100% recomendar a cualquier persona</p>
+                    </div>
+
+                    <div class="single-comment">
+                        <img src="apple-touch-icon.png"/>
+                        <p class="username">Anonimous wilkins</p>
+                        <p class="date-comment">12 de Agosto del 2017</p>
+                        <p class="description-comment">Me encanto la sesion, pude aprender mucho y lo puedo 100% recomendar a cualquier persona</p>
+                    </div>
+                </article>
+                <footer>
+                    <nav class="footer-bar">
+                        <ul>
+                            <li><a>Tarot Estelar</a></li>
+                            <li><a href="#">About me</a></li>
+                            <li><a href="#">Contact me</a></li>
+                            <li><a href="#">Blog</a></li>
+                        </ul>
+                    </nav>
+                </footer>
             </section>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
