desktop v-3, not final

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body>
+        <section class="main_container">
             <header>
                 <h1>Tarot Estelar</h1>
                 <div><i class="fa fa-bars" aria-hidden="true"></i></div>
@@ -87,6 +87,7 @@
                     </nav>
                 </footer>
             </section>
+        </section>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
