--- a/index2.html
+++ b/index2.html
@@ -1,86 +1,146 @@
-    <!doctype html>
+        <!doctype html>
         <html class="no-js" lang="">
-            <head>
-                <meta charset="utf-8">
-                <meta http-equiv="x-ua-compatible" content="ie=edge">
-                <title></title>
-                <meta name="description" content="">
-                <meta name="viewport" content="width=device-width, initial-scale=1">
+        <head>
+            <meta charset="utf-8">
+            <meta http-equiv="x-ua-compatible" content="ie=edge">
+            <title></title>
+            <meta name="description" content="">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
 
-                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-                <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-                <link rel="apple-touch-icon" href="apple-touch-icon.png">
-                <link rel="stylesheet" href="css/main2.css">
-                <!-- Place favicon.ico in the root directory -->
-                <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-                <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-                <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-                <script src="js/plugins.js"></script>
-                <script src="js/main.js"></script>
-                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-            </head>
-            <body>
-                 <nav class="navbar navbar-default">
-                  <div class="container">
-                    <div class="navbar-header">
-                          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                      </button>
-                      <a class="navbar-brand" href="#">Sandra Depianti |  <strong>Tarot Estelar </strong></a>
-                    </div>
-                    <div class="collapse navbar-collapse" id="myNavbar">
-                      <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Sobre Mí</a></li>
-                        <li><a href="#">Contacto</a></li>
-                        <li><a href="#">Blog</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </nav> 
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+            <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+            <link rel="apple-touch-icon" href="apple-touch-icon.png">
+            <link rel="stylesheet" href="css/main2.css">
+            <!-- Place favicon.ico in the root directory -->
+            <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+            <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+            <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+            <script src="js/plugins.js"></script>
+            <script src="js/main.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        </head>
+        <header>
+            <nav class="navbar navbar-default">
+              <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Sandra Depianti |  <strong>Tarot Estelar </strong></a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre Mí</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </div>
+    </div>
+</nav> 
+</header>
+<body>
 
-                <div class="container-fluid text-center">    
-                  <div class="row content">
-                    <div class="col-sm-2 sidenav">
-                    </div>
-                    <div class="col-sm-8 text-left"> 
-                                          <article class="home-description">
-                        <h2>¿Qué es el Tarot Estelar?</h2>
-                        <p>El tarot estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,
-                            conciencia y mutación profunda para vivir una vida plena.</p>
-                        <p>Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con
-                            una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la
-                            personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas
-                            respuestas en la conducta ante las alternativas cotidianas.</p>
-                        <p>Con el tarot astrológico podemos mirarnos con nuevos ojos y aceptar nuestra tarea de
-                            formación y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra
-                            existencia, aun los dolorosos, para convertirlos en alimento del alma.</p>
-                        <p>A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte en
-                            un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la
-                            autosanación, ejercitando y educando nuestras capacidades internas para logra la
-                            transpersonalidad.</p>
-                        <p>El tarot astrológico plantea la formación de personas capaces de generar sus propios procesos
-                            de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
-                    </article>
-                    </div>
-                    <div class="col-sm-2 sidenav">
-                      
-                    </div>
-                  </div>
+
+    <div class="container-fluid text-center">    
+        <div class="col-sm-1 sidenav">
+        </div>
+        <div class="col-sm-8 text-left"> 
+          <article class="home-description">
+            <h2><strong>¿Qué es el Tarot Estelar?</strong></h2><br>
+            <p>El tarot estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,
+                conciencia y mutación profunda para vivir una vida plena.<br>
+                Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con
+                una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la
+                personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas
+                respuestas en la conducta ante las alternativas cotidianas.<br>
+                Con el tarot astrológico podemos mirarnos con nuevos ojos y aceptar nuestra tarea de
+                formación y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra
+                existencia, aun los dolorosos, para convertirlos en alimento del alma.<br>
+                A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte en
+                un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la
+                autosanación, ejercitando y educando nuestras capacidades internas para logra la
+                transpersonalidad.<br>
+                El tarot astrológico plantea la formación de personas capaces de generar sus propios procesos
+                de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
+            </article>
+        </div>
+        <div class="col-sm-2 sidenav">
+            <div id="zonaDerechaInfo">
+                <h3>Solicitar Información</h3>
+                <div id="divRecibirInfo">
+                    <form method="post" action="#" name="recibirInfo" id="recibirInfo">
+                        <input name="codCurso" id="codCurso" value="cursos-de-java" type="hidden">
+                        <input name="referer" id="referer" value="http://www.educacionit.com/" type="hidden">
+                        <label>
+                            <input name="nombre" placeholder="Nombre..." id="nombre" value="" type="text">
+                        </label>
+                        <div class="clearer"></div>
+                        <label>
+                            <input name="email" placeholder="e-Mail..." id="email" value="" type="text">
+                        </label>
+                        <div class="clearer"></div>
+                        <label>
+                            <textarea id="consulta" placeholder="Comentario..." name="consulta"></textarea>
+                        </label>
+                        <div style="text-align:center;">
+                            <a class="lightbox" href="ajax-contacto.php?nomCurso=Cursos+de+Java&amp;codCurso=cursos-de-java&amp;referer=&amp;landing=true" style="color: white; text-decoration: none;background:#737373; font-size:12px; padding:7px 10px ;">Enviar</a>
+                        </div>
+                    </form>
                 </div>
+            </div>
+        </div>
+        <div class="col-sm-1 sidenav">
+        </div>
+    </div>
 
-                <footer class="container-fluid bg-4 text-center">
-                    <p>Todos los derechos reservados <a href=""></a></p>
-                </footer>
+    <div class="parallax"></div>
 
-                <script>
-                    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-                    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-                    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-                    e.src='https://www.google-analytics.com/analytics.js';
-                    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-                    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-                </script>
-            </body>
-        </html>
+    <div class="container-fluid text-center">    
+        <div class="col-sm-1 sidenav">
+        </div>
+        <div class="col-sm-8 text-left"> 
+            <article class="home-description">
+            <h2><strong>Sobre mí</strong></h2><br>
+                <p>El tarot estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,
+                    conciencia y mutación profunda para vivir una vida plena.<br>
+                    Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con
+                    una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la
+                    personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas
+                    respuestas en la conducta ante las alternativas cotidianas.<br>
+                    Con el tarot astrológico podemos mirarnos con nuevos ojos y aceptar nuestra tarea de
+                    formación y trabajo en un camino donde aprenderemos a integrar los aspectos de nuestra
+                    existencia, aun los dolorosos, para convertirlos en alimento del alma.<br>
+                    A partir de una decisión voluntaria, de intenso compromiso vital, el practicante se convierte en
+                    un explorador de esta vía, que ofrece recursos infinitos para la autosuperación y la
+                    autosanación, ejercitando y educando nuestras capacidades internas para logra la
+                    transpersonalidad.<br>
+                    El tarot astrológico plantea la formación de personas capaces de generar sus propios procesos
+                    de transformación, aplicando un pensamiento creativo a la sanación sin fronteras.</p>
+                </article>
+            </div>
+            <div class="col-sm-2 sidenav">
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <footer class="container-fluid bg-4 text-center">
+            <p>Todos los derechos reservados <a href=""></a></p>
+        </footer>
+
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+                function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+    </body>
+    </html>
