desktop v-4, not final

--- a/index2.html
+++ b/index2.html
@@ -38,15 +38,13 @@
             </ul>
         </div>
     </div>
-</nav> 
+</nav>
 </header>
 <body>
 
 
-    <div class="container-fluid text-center">    
-        <div class="col-sm-1 sidenav">
-        </div>
-        <div class="col-sm-8 text-left"> 
+    <div class="container-fluid">
+        <div class="col-sm-10 text-left">
           <article class="home-description">
             <h2><strong>¿Qué es el Tarot Estelar?</strong></h2><br>
             <p>El tarot estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,
@@ -67,9 +65,9 @@
             </article>
         </div>
         <div class="col-sm-2 sidenav">
-            <div id="zonaDerechaInfo">
+            <div class="zonaDerechaInfo">
                 <h3>Solicitar Información</h3>
-                <div id="divRecibirInfo">
+                <div class="divRecibirInfo">
                     <form method="post" action="#" name="recibirInfo" id="recibirInfo">
                         <input name="codCurso" id="codCurso" value="cursos-de-java" type="hidden">
                         <input name="referer" id="referer" value="http://www.educacionit.com/" type="hidden">
@@ -97,10 +95,10 @@
 
     <div class="parallax"></div>
 
-    <div class="container-fluid text-center">    
+    <div class="container-fluid text-center">
         <div class="col-sm-1 sidenav">
         </div>
-        <div class="col-sm-8 text-left"> 
+        <div class="col-sm-12 text-left">
             <article class="home-description">
             <h2><strong>Sobre mí</strong></h2><br>
                 <p>El tarot estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,
