--- a/index_test.html
+++ b/index_test.html
@@ -40,7 +40,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Sandra Depianti | <strong>Tarot Estelar</strong></a>
+                    <a class="navbar-brand" href="#"><strong>Tarot Estelar</strong></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,7 +66,6 @@
         <header class="image-bg-fluid-height">
             <img class="img-responsive img-center" src="http://placehold.it/200x200&text=Logo" alt="">
         </header>
-
         <!-- Content Section -->
         <section>
             <div class="container">
@@ -74,7 +73,7 @@
                     <div class="col-lg-12">
                         <h1 class="section-heading">¿Qué es el Tarot Estelar?</h1>
                         <p class="lead section-lead">Con el Tarot Estelar podemos mirarnos con nuevos ojos y aceptar nuestra tarea de formación.</p>
-                        <p class="section-paragraph">El Tarot Estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,conciencia y mutación profunda para vivir una vida plena.</p>
+                        <p>El Tarot Estelar es un tarot evolutivo que propone emprender una vía creativa de corazón,conciencia y mutación profunda para vivir una vida plena.</p>
                         <p>Es una herramienta que posibilita trascender la conciencia ordinaria y llegar a conectarse con
                             una realidad superior, cuyos efectos en el mundo sensible lograrán transformar la
                             personalidad entera y permitirán surgir una personalidad más evolucionada, con nuevas
@@ -102,7 +101,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <h1 class="section-heading">Section Heading</h1>
+                                    <h1 class="section-heading">Sobre mí</h1>
                                         <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                         <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
                                     </div>
