desktop v-5, comments 2st draft

--- a/index2.html
+++ b/index2.html
@@ -122,40 +122,54 @@
             </div>
         </div>
 
-        <section class="container" >
+        <section class="container block-comments" >
             <div class="row">
                 <div class="col-sm-12 title-comments">
                     <h2><strong>Comentarios</strong></h2>
                 </div>
             </div>
-                <div class="col-sm-8 user-name-comment">
+            <div class="col-sm-5 block-comment">
+                <div class="user-name-comment">
                     <p>Mateo Guilarte</p>
+                    <span>-</span>
+                    <p>10 de Agosto del 2017</p>
                 </div>
-                <div class="col-sm-4 comment-date">
+                <div class="border-comment">
+                    <p>Me encanto la sesion espero poder volver en algun futuro!</p>
+                </div>
+            </div>
+
+            <div class="col-sm-5 block-comment">
+                <div class="user-name-comment">
+                    <p>Mateo Guilarte</p>
+                    <span>-</span>
                     <p>10 de Agosto del 2017</p>
                 </div>
                 <div class="col-sm-12 border-comment">
                     <p>Me encanto la sesion espero poder volver en algun futuro!</p>
                 </div>
-
-            <div class="col-sm-8 user-name-comment">
-                <p>Tobias Guido</p>
-            </div>
-            <div class="col-sm-4 comment-date">
-                <p>10 de Agosto del 2017</p>
-            </div>
-            <div class="col-sm-12 border-comment">
-                <p>Buenisima la sesion, la re recomiento. Porfavor no se van a repentir</p>
             </div>
 
-            <div class="col-sm-8 user-name-comment">
-                <p>Marcos Toro</p>
+            <div class="col-sm-5 block-comment">
+                <div class="user-name-comment">
+                    <p>Mateo Guilarte</p>
+                    <span>-</span>
+                    <p>10 de Agosto del 2017</p>
+                </div>
+                <div class="col-sm-12 border-comment">
+                    <p>Me encanto la sesion espero poder volver en algun futuro!</p>
+                </div>
             </div>
-            <div class="col-sm-4 comment-date">
-                <p>10 de Agosto del 2017</p>
-            </div>
-            <div class="col-sm-12 border-comment">
-                <p>La mejor sesion que tuve en mi vida, la verdad que 100% recomendable</p>
+
+            <div class="col-sm-5 block-comment">
+                <div class="user-name-comment">
+                    <p>Mateo Guilarte</p>
+                    <span>-</span>
+                    <p>10 de Agosto del 2017</p>
+                </div>
+                <div class="col-sm-12 border-comment">
+                    <p>Me encanto la sesion espero poder volver en algun futuro!</p>
+                </div>
             </div>
         </section>
 
